# cpah-1.1.7-CNver

./: .gitignore  .gitlab-ci.yml  LICENSE  cpah.spec  entrypoint.py  mkdocs.yml  pyproject.toml  readme.md
cpah/: __init__.py  constants.py  exceptions.py  logger.py  logic.py  models.py  ui.py
cpah/resources/images/languages/ar/: meta.json
cpah/resources/images/languages/de/: meta.json
cpah/resources/images/languages/en/: meta.json
cpah/resources/images/languages/es/: meta.json
cpah/resources/images/languages/fr/: meta.json
cpah/resources/images/languages/it/: meta.json
cpah/resources/images/languages/ja/: meta.json
cpah/resources/images/languages/ko/: meta.json
cpah/resources/images/languages/pl/: meta.json
cpah/resources/images/languages/pt/: meta.json
cpah/resources/images/languages/ru/: meta.json
cpah/resources/images/languages/zh-cn/: meta.json
cpah/resources/uis/: main.ui  settings.ui
docs/: development.md  index.md
docs/stylesheets/: extra.css
tests/: test_logic.py
